[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scripts/Character.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Character" type="KinematicBody2D" index="0"]

position = Vector2( 0, -0.19371 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

position = Vector2( -0.650795, 2.21879 )
scale = Vector2( 0.0306104, 0.0306104 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 0.1
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Offset", "Smoothing" ]

[node name="TempSprite" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="BodyCollision" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="RestReplenish" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ProtectionReplenish" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="AntiVirusProg" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="RestReplenish" to="." method="_on_RestReplenish_timeout"]

[connection signal="timeout" from="ProtectionReplenish" to="." method="_on_ProtectionReplenish_timeout"]


